2011-11-09  Andreas Kling  <kling@webkit.org>

        Unreviewed build fix after r99711. (Signed/unsigned compare.)

        * css/CSSPrimitiveValue.cpp:
        (WebCore::CSSPrimitiveValue::getDoubleValueInternal):

2011-11-09  Alexander Pavlov  <apavlov@chromium.org>

        Web Inspector: Provisionally change StylesSidebarPane section DOM layout to allow media queries
        https://bugs.webkit.org/show_bug.cgi?id=71902

        Reviewed by Pavel Feldman.

        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylePropertiesSection):
        (WebInspector.StylePropertiesSection.prototype.editingSelectorCommitted.successCallback):
        (WebInspector.StylePropertiesSection.prototype.editingSelectorCommitted):
        (WebInspector.ComputedStylePropertiesSection.prototype.rebuildComputedTrace):
        (WebInspector.BlankStylePropertiesSection.prototype.editingSelectorCommitted.successCallback):
        (WebInspector.BlankStylePropertiesSection.prototype.editingSelectorCommitted):

2011-11-09  Andreas Kling  <kling@webkit.org>

        CSSPrimitiveValue: Fix up bitfield member types.
        <http://webkit.org/b/71751>

        Reviewed by Antti Koivisto.

        The primitive unit type doesn't need to be a signed value,
        and by making it unsigned, we can shave one bit off of it.
        Furthermore, m_hasCachedCSSText and m_isQuirkValue should be
        bool, not unsigned.

        * css/CSSValue.h:

2011-11-09  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: discard injected scripts upon front-end disconnect.
        https://bugs.webkit.org/show_bug.cgi?id=71823

        Reviewed by Yury Semikhatsky.

        Test: http/tests/inspector-enabled/injected-script-discard.html

        * inspector/InspectorAgent.cpp:
        (WebCore::InspectorAgent::clearFrontend):

2011-11-09  Andreas Kling  <kling@webkit.org>

        CSS: Remove empty value and rule destructors.
        <http://webkit.org/b/71901>
